--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -70,6 +70,12 @@ month={6},
   howpublished={\url{https://github.com/uchicago-cs/deepdish}}
   }
 
+@Misc{gh,
+  author={Rachel C. Kurchin and Giuseppe Romano},
+  title={Bayesim},
+  howpublished={\url{https://github.com/pv-lab/bayesim}}
+  }
+
 @Article{mpl,
   Author    = {Hunter, J. D.},
   Title     = {Matplotlib: A 2D graphics environment},
