minor manuscript updates

--- a/paper/Manuscript.tex
+++ b/paper/Manuscript.tex
@@ -79,7 +79,7 @@ urlcolor={blue!80!black}}
 
  \begin{figure}
    \includegraphics[width=0.9\columnwidth]{figure_1.png}
-   \caption{a) High-level flowchart of inputs and outputs to \texttt{bayesim}, b) 2D schematic of adaptive grid sampling approach.}
+   \caption{a) High-level flowchart of inputs and outputs to \texttt{bayesim}. Observed data as a function of experimental conditions and modeled data over those same conditions as well as fitting parameters are fed in, and the code produces a probability distribution over the fitting parameter values. b) 2D schematic of adaptive grid sampling approach, illustrating progressive subdivision in higher-probability regions of parameter space.}
    \label{fig1}
  \end{figure}
 
