--- a/examples/diode/ideal_diode.ipynb
+++ b/examples/diode/ideal_diode.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "pl = byp.Param_list()\n",
-    "pl.add_fit_param(name='Bp', display_name=\"B'\", val_range=[10,1000], spacing='log', length=20, units='arb.')\n",
+    "pl.add_fit_param(name='Bp', display_name=\"B'\", val_range=[10,1000], spacing='log', length=20, units='mA*K$^{-3/n}$/cm$^2$')\n",
     "pl.add_fit_param(name='n', val_range=[1,2], length=20, min_width=0.01) # units default to \"unitless\"\n",
     "\n",
     "# --------- alternative options --------\n",
