--- a/paper/Manuscript.tex
+++ b/paper/Manuscript.tex
@@ -31,12 +31,13 @@ urlcolor={blue!80!black}}
 \title{Bayesim: a tool for adaptive grid model fitting with Bayesian inference}
 
 \author{Rachel Kurchin}
-\affiliation{Department of Materials Science \& Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
+\email{rachel.kurchin@gmail.com}
+\affiliation{Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
 \author{Giuseppe Romano}
-\affiliation{Department of Mechanical Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
+\affiliation{Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
 \author{Tonio Buonassisi}
 \email{buonassi@mit.edu}
-\affiliation{Department of Mechanical Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
+\affiliation{Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
 
 \begin{abstract}
   Bayesian inference is a widely used and powerful analytical technique in fields such as astronomy and particle physics but has historically been underutilized in some other disciplines including semiconductor devices. In this work, we introduce \texttt{bayesim}, a Python package that utilizes adaptive grid sampling to efficiently generate a probability distribution over multiple input parameters to a forward model using a collection of experimental measurements. We discuss the implementation choices made in the code, showcase two examples in photovoltaics, and discuss general prerequisites for the approach to apply to other systems.
@@ -47,11 +48,11 @@ urlcolor={blue!80!black}}
 \maketitle
 
 \section*{Introduction}
-  There are a plethora of examples across diverse scientific and engineering fields of mathematical models used to simulate the results of experimental observations. In many cases, there are input parameters to these models which are difficult to determine via direct measurement, and it is desirable to invert the numerical model -- that is, use the experimental observations to determine values of the input parameters. Bayesian inference is a fruitful framework within which to do such fitting, since the resulting posterior probability distribution over the parameters of interest can give rich insights into not just the most likely values of the parameters, but also uncertainty about these values and the potentially complicated ways in which they can covary to give equally good fits to observations.
+  There are a plethora of examples across diverse scientific and engineering fields of mathematical models used to simulate the results of experimental observations. In many cases, there are input parameters to these models which are difficult to determine via direct measurement, and it is desirable to invert the numerical model -- that is, use the experimental observations to determine values of the input parameters. Bayesian inference, or Bayesian parameter estimation (BPE) is a fruitful framework within which to do such fitting, since the resulting posterior probability distribution over the parameters of interest can give rich insights into not just the most likely values of the parameters, but also uncertainty about these values and the potentially complicated ways in which they can covary to give equally good fits to observations. It has been widely used for decades in fields such as cosmology~\cite{cosmobayesreview}, particle physics~\cite{particlebayes, higgsbayes}, and biology~\cite{evobiobayes, sysbiobayes}, with well-developed and widely used code packages specialized to these purposes.~\cite{multinest, biobayescode} However, the use of Bayesian inference in materials science and related contexts is much more recent, having only emerged in the past few years.~\cite{lookman, combo, SnSJoule}
 
-  We have previously demonstrated the value of a Bayesian approach in using automated high-throughput temperature- and illumination-dependent current-voltage measurements (JVTi) to fit material/interface properties and defect recombination parameters in photovoltaic (PV) absorbers~\cite{SnSJoule,FeBayes}. In cases such as these, when the data model is not a simple analytical equation but rather a computationally intensive numerical model, efficient, nonredundant sampling of the parameter space when computing likelihoods becomes critical to making the fit feasible.
+  We have previously demonstrated the value of a BPE approach in using automated high-throughput temperature- and illumination-dependent current-voltage measurements ($JVTi$) to fit material/interface properties and defect recombination parameters in photovoltaic (PV) absorbers~\cite{SnSJoule,FeBayes}, i.e. as a replacement for direct experimental characterization via probabilitistic inversion of a forward model. In cases such as these, when the data model is not a simple analytical equation but rather a computationally intensive numerical model, efficient, nonredundant sampling of the parameter space when computing likelihoods becomes critical to making the fit feasible.
 
-  In this work, we introduce \texttt{bayesim}, a Python-based code that utilizes adaptive grid sampling to perform Bayesian parameter estimation. We discuss the structure of the code, its implementation, and provide several examples of its usage. While the authors' expertise is in the realm of semiconductor physics and thus the examples herein are drawn from that space, we also discuss the general characteristics of a problem amenable to this approach so that researchers from other fields might adopt it as well.
+  In this work, we introduce \texttt{bayesim}, a Python-based code that utilizes adaptive grid sampling to perform BPE. It is designed to be easy to use by anyone with basic familiarity with Python. We discuss the structure of the code, its implementation, and provide several examples of its usage. While the authors' expertise is in the realm of semiconductor physics and thus the examples herein are drawn from that space, we also discuss the general characteristics of a problem amenable to this approach so that researchers from other fields might adopt it as well.
 
 \section*{Technical Background}
 
@@ -97,7 +98,7 @@ urlcolor={blue!80!black}}
 
   The basic structure of \texttt{bayesim} is shown in ~\autoref{structure}a. Detailed and up-to-date documentation of classes, functions, and example applications is maintained online.~\cite{docs} The top-level object with which users interact is implemented in the \texttt{Model} class. The \texttt{params} module defines classes to store information about the various types of parameters (fitting parameters, experimental conditions, and measured output) while the \texttt{Pmf} class stores the probability distribution and implements the manipulations required for Bayesian updates.
 
-  ~\autoref{structure}b is a flowchart of using the code, with the main inference loop surrounded by a dotted line. One first needs to provide the observed and modeled data. Observed data is accepted in HDF5 format, while modeled data can be an HDF5 file (in which case \texttt{bayesimn} will determine the fitting parameter space grid from this file), or if the fitting parameter space has been predefined, one can also attach a Python function that computes the model data (e.g. an interface to a numerical model). Observed data should have associated experimental uncertainties, or the user can indicate a fixed value of uncertainty to use for all observations upon attaching the data.
+  ~\autoref{structure}b is a flowchart of using the code, with the main inference loop surrounded by a dotted line. One first needs to provide the observed and modeled data. Observed data is accepted in HDF5 format, while modeled data can be an HDF5 file (in which case \texttt{bayesim} will determine the fitting parameter space grid from this file), or if the fitting parameter space has been predefined, one can also attach a Python function that computes the model data (e.g. an interface to a numerical model). Observed data should have associated experimental uncertainties, or the user can indicate a fixed value of uncertainty to use for all observations upon attaching the data.
 
   Once modeled data is attached, model uncertainty can be computed. At each point in the space of experimental conditions, a matrix of the simulated output variable as a function of the fitting parameters is constructed and at each point in this matrix, the largest difference along any index is computed. This is set as the model uncertainty for this set of experimental conditions at this point in parameter space.
 
@@ -137,14 +138,14 @@ urlcolor={blue!80!black}}
 
     As validation, we generate the ``observations" using the same model we'll use for fitting, with parameter values of $n=1.36$ and $B'=258$, and four temperature values of 150, 200, 250, and 300 K. These ``observations" are shown in ~\autoref{ID_data}a. When \texttt{bayesim} imports observed data, it can optionally discard data points that are very close by to each other in order to reduce computational load on modeling less informative points -- the observed points that were actually imported (59 out of 305 total ``observations") are shown as overlaid scatter dots.
 
-    The lower part of ~\autoref{ID_data} shows the posterior distributions after the first inference run and after each round of subdivision, demonstrating that \texttt{bayesim} gets progressively closer to the ``true" values as the loop continues iterating. In addition, on the first inference run (prior to any subdivision), an average of 43\% of grid points had larger model uncertainty than experimental uncertainty, while after the second subdivision, only 2\% did, while the average absolute error of the highest-probability model decreased from 0.03 after the first run to 0.007 after the second subdivision.
+    The lower part of ~\autoref{ID_data} shows the posterior distributions after the first inference run and after each round of subdivision, demonstrating that \texttt{bayesim} gets progressively closer to the ``true" values as the loop continues iterating. In addition, on the first inference run (prior to any subdivision), an average of 45\% of grid points had larger model uncertainty than experimental uncertainty, while after the second subdivision, only 1.9\% did, while the average absolute error of the highest-probability model decreased from 0.03 after the first run to 0.007 after the second subdivision. In addition, the initial grid had 400 boxes, the singly subdivided grid 164, and the final grid (4x initial resolution) had 144, meaning the overall additional computational effort to quadruple the fit precision was less than producing the initial simulation set.
 
   \subsection{SnS Solar Cell}
-    This example aims to demonstrate a more realistic application of \texttt{bayesim}, i.e. when the model being used to compute likelihoods is more computationally expensive. In this case, we will repeat the analysis from Ref.~\cite{SnSJoule}, using SCAPS~\cite{SCAPS} (a coupled drift-diffusion/Poisson solver) as the model, which takes 10-15 core-seconds for a single J-V sweep.
+    This example demonstrates a more realistic application of \texttt{bayesim}, i.e. when the model being used to compute likelihoods is more computationally expensive. In this case, we will repeat the analysis from Ref.~\cite{SnSJoule}, using SCAPS~\cite{SCAPS} (a coupled drift-diffusion/Poisson solver) as the model, which takes 10-15 core-seconds for a single J-V sweep.
 
     \begin{figure}
       \includegraphics[width=0.8\columnwidth]{figure_4.png}
-      \caption{PMFs produced by \texttt{bayesim}, after initial run and after one subdivision (Blue and green, respectively). In red, PMF from Reference~\cite{SnSJoule}. Inset: device structure (illuminated from above) with bulk SnS ($\mu$,$\tau$ fit) and SnS/Zn(O,S) interface ($\Delta E_\text{c}$, $S_{\text{eff}}$ fit) indicated.}
+      \caption{PMFs produced by \texttt{bayesim}, after initial run and after one subdivision (blue and green, respectively). In red, PMF from Reference~\cite{SnSJoule}. Inset: device structure (illuminated from above) with bulk SnS ($\mu$,$\tau$ fit) and SnS/Zn(O,S) interface ($\Delta E_\text{c}$, $S_{\text{eff}}$ fit) indicated.}
       \label{SnS_data}
     \end{figure}
 
@@ -160,7 +161,7 @@ urlcolor={blue!80!black}}
  would be amenable to \texttt{bayesim}. The online documentation page~\cite{docs} maintains a list of examples which will grow as the authors become aware of/implement more, and the latest version of the code can always be found in the Github repository~\cite{gh}. The online documentation also hosts other useful information, such as detailed documentation of every class and function in \texttt{bayesim}, a more extensive technical background section than is included here, and an updated manual for usage of the code.
 
 \section*{Acknowledgements}
-R.C.K. acknowledges the funding of a Blue Waters Graduate Fellowship. The SnS work referenced in~\cite{SnSJoule} was funded by a Google Faculty Research Award, as well as the Center for Next Generation Materials by Design (CNGMD), an Energy Frontier Research Center funded by the U.S. Department of Energy, Office of Science, Basic Energy Sciences.
+R.C.K. acknowledges the funding of a Blue Waters Graduate Fellowship. This work was supported by a TOTAL SA research grant funded through MIT\text{ei}, the MIT Energy Initiative.
 
 \bibliography{biblio}
 \bibliographystyle{ieeetr}
