--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -98,3 +98,129 @@ month={6},
   year = {2018},
   howpublished={\url{https://pv-lab.github.io/bayesim/_build/html/index.html}}
 }
+
+@article{multinest,
+author = {Feroz, F. and Hobson, M. P. and Bridges, M.},
+title = {MultiNest: an efficient and robust Bayesian inference tool for cosmology and particle physics},
+journal = {Monthly Notices of the Royal Astronomical Society},
+volume = {398},
+number = {4},
+pages = {1601-1614},
+year = {2009},
+doi = {10.1111/j.1365-2966.2009.14548.x},
+URL = {http://dx.doi.org/10.1111/j.1365-2966.2009.14548.x},
+eprint = {/oup/backfile/content_public/journal/mnras/398/4/10.1111/j.1365-2966.2009.14548.x/2/mnras0398-1601.pdf}
+}
+
+@article{cosmobayesreview,
+author = { Roberto   Trotta },
+title = {Bayes in the sky: Bayesian inference and model selection in cosmology},
+journal = {Contemporary Physics},
+volume = {49},
+number = {2},
+pages = {71-104},
+year  = {2008},
+publisher = {Taylor & Francis},
+doi = {10.1080/00107510802066753},
+URL = {
+        https://doi.org/10.1080/00107510802066753
+},
+eprint = {
+        https://doi.org/10.1080/00107510802066753
+}
+}
+
+@article{particlebayes,
+  author={Roberto Trotta and Farhan Feroz and Mike Hobson and Leszek Roszkowski and Roberto Ruiz de Austri},
+  title={The impact of priors and observables on parameter inferences in the constrained MSSM},
+  journal={Journal of High Energy Physics},
+  volume={2008},
+  number={12},
+  pages={024},
+  url={http://stacks.iop.org/1126-6708/2008/i=12/a=024},
+  year={2008}
+  }
+
+  @article{higgsbayes,
+  title = "Global Bayesian Analysis of the Higgs-boson Couplings",
+  journal = "Nuclear and Particle Physics Proceedings",
+  volume = "273-275",
+  pages = "834 - 840",
+  year = "2016",
+  note = "37th International Conference on High Energy Physics (ICHEP)",
+  issn = "2405-6014",
+  doi = "https://doi.org/10.1016/j.nuclphysbps.2015.09.128",
+  url = "http://www.sciencedirect.com/science/article/pii/S2405601415006173",
+  author = "Jorge de Blas and Marco Ciuchini and Enrico Franco and Diptimoy Ghosh and Satoshi Mishima and Maurizio Pierini and Laura Reina and Luca Silvestrini",
+  keywords = "Higgs boson, Effective field theory"
+  }
+
+  @article {evobiobayes,
+	author = {Huelsenbeck, John P. and Ronquist, Fredrik and Nielsen, Rasmus and Bollback, Jonathan P.},
+	title = {Bayesian Inference of Phylogeny and Its Impact on Evolutionary Biology},
+	volume = {294},
+	number = {5550},
+	pages = {2310--2314},
+	year = {2001},
+	doi = {10.1126/science.1065889},
+	publisher = {American Association for the Advancement of Science},
+	issn = {0036-8075},
+	URL = {http://science.sciencemag.org/content/294/5550/2310},
+	eprint = {http://science.sciencemag.org/content/294/5550/2310.full.pdf},
+	journal = {Science}
+}
+
+@article{sysbiobayes,
+author = {Wilkinson, Darren J.},
+title = {Bayesian methods in bioinformatics and computational systems biology},
+journal = {Briefings in Bioinformatics},
+volume = {8},
+number = {2},
+pages = {109-116},
+year = {2007},
+doi = {10.1093/bib/bbm007},
+URL = {http://dx.doi.org/10.1093/bib/bbm007},
+eprint = {/oup/backfile/content_public/journal/bib/8/2/10.1093/bib/bbm007/2/bbm007.pdf}
+}
+
+@article{biobayescode,
+title = "RELION: Implementation of a Bayesian approach to cryo-EM structure determination",
+journal = "Journal of Structural Biology",
+volume = "180",
+number = "3",
+pages = "519 - 530",
+year = "2012",
+issn = "1047-8477",
+doi = "https://doi.org/10.1016/j.jsb.2012.09.006",
+url = "http://www.sciencedirect.com/science/article/pii/S1047847712002481",
+author = "Sjors H.W. Scheres",
+keywords = "Electron microscopy, Single-particle analysis, Maximum likelihood, Image processing, Software development"
+}
+
+@article {lookman,
+	author = {Xue, Dezhen and Balachandran, Prasanna V. and Yuan, Ruihao and Hu, Tao and Qian, Xiaoning and Dougherty, Edward R. and Lookman, Turab},
+	title = {Accelerated search for BaTiO3-based piezoelectrics with vertical morphotropic phase boundary using Bayesian learning},
+	volume = {113},
+	number = {47},
+	pages = {13301--13306},
+	year = {2016},
+	doi = {10.1073/pnas.1607412113},
+	publisher = {National Academy of Sciences},
+	issn = {0027-8424},
+	URL = {http://www.pnas.org/content/113/47/13301},
+	eprint = {http://www.pnas.org/content/113/47/13301.full.pdf},
+	journal = {Proceedings of the National Academy of Sciences}
+}
+
+@article{combo,
+title = "COMBO: An efficient Bayesian optimization library for materials science",
+journal = "Materials Discovery",
+volume = "4",
+pages = "18 - 21",
+year = "2016",
+issn = "2352-9245",
+doi = "https://doi.org/10.1016/j.md.2016.04.001",
+url = "http://www.sciencedirect.com/science/article/pii/S2352924516300035",
+author = "Tsuyoshi Ueno and Trevor David Rhone and Zhufeng Hou and Teruyasu Mizoguchi and Koji Tsuda",
+keywords = "Bayesian optimization, Python library, Global optimization, Materials design"
+}
