committing before repackaging

--- a/examples/SnS/SnS_fitting.ipynb
+++ b/examples/SnS/SnS_fitting.ipynb
@@ -24,16 +24,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import some code that we'll need\n",
     "import numpy as np\n",
     "import sys\n",
     "import pandas as pd\n",
-    "sys.path.append('../../')\n",
     "import bayesim.model as bym\n",
     "import bayesim.params as byp\n",
     "import deepdish as dd\n",
@@ -286,21 +283,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py36_2",
+   "display_name": "Python [conda env:twinetest]",
    "language": "python",
-   "name": "py36_2"
+   "name": "conda-env-twinetest-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
